QUICK-FIX Fix modal and LHN z-index so they are not in conflict

--- a/src/ggrc/assets/stylesheets/_modal.scss
+++ b/src/ggrc/assets/stylesheets/_modal.scss
@@ -7,6 +7,7 @@
 
 .modal-backdrop {
   background-color: $white;
+  z-index: 2050 !important;
 }
 
 .field-hide {
@@ -31,6 +32,7 @@
   height: auto !important;
   position: absolute;
   top: 12%;
+  z-index: 3000 !important;
   .small-info {
     h3 {
       font-weight:normal;
